--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,8 @@
   </head>
 
 
-  <body ng-app="app" ng-disable-scroll="vm.toggleLeft()">
+  <body ng-app="app">
     <mytoolbar></mytoolbar>
-    <ui-view></ui-view>
     <!-- module -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/pdf.js-viewer/pdf.js"></script>
